styles.css
body{
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    background-color: #f0f0f0;
}
.login-container{
    background-color: #f0f0f0;
    padding: 20px;
    border-radius: 8px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    text-align: center;
}
h1{
    color: #333;
    margin-bottom: 20px;
}
label{
    display: block;
    margin-bottom: 5px;
    font-weight:  bold;
}
input{
    width: 85%;
    padding: 10px;
    margin-bottom: 15px;
    border: 1px solid #ccc;
    border-radius: 4px;
}
button{
    width: 25%;
    padding: 10px;
    background-color: #007bff;
    color: #f0f0f0;
    border: none;
    border-radius: 4px;
    cursor: pointer;
}
button:hover{
    background-color: #0056b3;
}
.error-message{
    color: red;
    margin-top: 10px;
}
.search-container {
    background-color: #fff;
    padding: 20px;
    border-radius: 8px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    max-width: 800px;
    margin: 20px auto;
}
.filters {
    margin-bottom: 20px;
}
.filters label {
    margin-right: 10px;
}
.filters select {
    padding: 5px;
    margin-right: 20px;
}
.dog-list {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Consistent column width */
    gap: 20px;
    width: 100%; /* Ensure the grid takes full width */
}
.dog-card {
    border: 1px solid #ccc;
    border-radius: 8px;
    padding: 10px;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    height: 100%;
}
.dog-card img {
    width: 95%; /* Ensure the image takes up the full width of the card */
    height: 190px; /* Set a fixed height for consistency */
    object-fit: cover; /* Ensure the image covers the area without distortion */
    border-radius: 30px;
    margin-top: 5px;
    margin-bottom: 1px;
}
.dog-card h3 {
    margin: 1px 0;
}
.dog-card p {
    margin: 1px 0;
}
.dog-card button {
    margin-top: 15px;
    padding: 3px;
    background-color: #478aff;
    color: #fff;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    width: 30%;
}
.dog-card button:hover {
    background-color: #ff6b81;
}
.pagination {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 20px;
}
.pagination button {
    padding: 8px 15px;
    margin: 1px 15px;
    cursor: pointer;
}

